--- a/sign-up.html
+++ b/sign-up.html
@@ -4,13 +4,16 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
+<?php
+session_start();
+?>
 <!DOCTYPE HTML>
 <html>
 <head>
 <title>Easy Admin Panel an Admin Panel Category Flat Bootstrap Responsive Website Template | Sign Up :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Easy Admin Panel Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Easy Admin Panel Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
  <!-- Bootstrap Core CSS -->
@@ -18,7 +21,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- Custom CSS -->
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <!-- Graph CSS -->
-<link href="css/font-awesome.css" rel="stylesheet"> 
+<link href="css/font-awesome.css" rel="stylesheet">
 <!-- jQuery -->
 <!-- lined-icons -->
 <link rel="stylesheet" href="css/icon-font.min.css" type='text/css' />
@@ -35,74 +38,107 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--//end-animate-->
 <!----webfonts--->
 <link href='//fonts.googleapis.com/css?family=Cabin:400,400italic,500,500italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
-<!---//webfonts---> 
+<!---//webfonts--->
  <!-- Meters graphs -->
 <script src="js/jquery-1.10.2.min.js"></script>
 <!-- Placed js at the end of the document so the pages load faster -->
 
-</head> 
-   
+</head>
+
  <body class="sign-in-up">
     <section>
 			<div id="page-wrapper" class="sign-in-wrapper">
 				<div class="graphs">
 					<div class="sign-up">
+						<form action="sign-up.php" method="post">
 						<h3>Register Here</h3>
-						<p class="creating">Having hands on experience in creating innovative designs,I do offer design 
+						<!--
+						<p class="creating">Having hands on experience in creating innovative designs,I do offer design
 							solutions which harness.</p>
+						-->
 						<h5>Personal Information</h5>
 						<div class="sign-u">
 							<div class="sign-up1">
-								<h4>First Name* :</h4>
+								<h4>First Name:</h4>
 							</div>
 							<div class="sign-up2">
 								<form>
-									<input type="text" placeholder=" " required=" "/>
+									<input type="text" name="firstName" placeholder="e.g. John" required=" "/>
 								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="sign-u">
 							<div class="sign-up1">
-								<h4>Last Name* :</h4>
+								<h4>Last Name:</h4>
 							</div>
 							<div class="sign-up2">
 								<form>
-									<input type="text" placeholder=" " required=" "/>
+									<input type="text" name="lastName" placeholder="e.g. Doe" required=" "/>
 								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="sign-u">
 							<div class="sign-up1">
-								<h4>Email Address* :</h4>
+								<h4>Email Address:</h4>
 							</div>
 							<div class="sign-up2">
 								<form>
-									<input type="text" placeholder=" " required=" "/>
+									<input type="text" name="emailAddress" placeholder="e.g. admin@Ibuzz.com" required=" "/>
 								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
+						<div class="sign-u">
+							<div class="sign-up1">
+								<h4>Contact Number:</h4>
+							</div>
+							<div class="sign-up2">
+								<form>
+									<input type="text" name="contactNumber" placeholder="e.g. 0123456789" required=" "/>
+								</form>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<!--<div class="form-group">
+							<label for="radio" class="col-sm-5 control-label"></label>
+							<div class="col-sm-8">
+								<div class="radio-inline"><label><input type="radio" name="isDriver"><h4> Administrator</h4></label></div>
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+								<div class="radio-inline"><label><input type="radio" name="isDriver"><h4> Driver</h4></label></div>
+							</div>
+						</div><br>-->
 						<h6>Login Information</h6>
 						<div class="sign-u">
 							<div class="sign-up1">
-								<h4>Password* :</h4>
+								<h4>Username:</h4>
 							</div>
 							<div class="sign-up2">
 								<form>
-									<input type="password" placeholder=" " required=" "/>
+									<input type="text" name="username" placeholder="e.g. abc1234" required=" "/>
 								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="sign-u">
 							<div class="sign-up1">
-								<h4>Confirm Password* :</h4>
+								<h4>Password:</h4>
 							</div>
 							<div class="sign-up2">
 								<form>
-									<input type="password" placeholder=" " required=" "/>
+									<input type="password" name="password" placeholder="e.g. zzz9999" required=" "/>
+								</form>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="sign-u">
+							<div class="sign-up1">
+								<h4>Confirm Password:</h4>
+							</div>
+							<div class="sign-up2">
+								<form>
+									<input type="password" name="cpassword" placeholder="e.g. zzz9999" required=" "/>
 								</form>
 							</div>
 							<div class="clearfix"> </div>
@@ -114,10 +150,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</form>
 							</div>
 							<div class="sub_home_right">
-								<p>Go Back to <a href="index.html">Home</a></p>
+								<p>Go Back to <a href="sign-in.html">Login</a></p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
+						</form>
 					</div>
 				</div>
 			</div>
@@ -127,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</footer>
         <!--footer section end-->
 	</section>
-	
+
 <script src="js/jquery.nicescroll.js"></script>
 <script src="js/scripts.js"></script>
 <!-- Bootstrap Core JavaScript -->
