--- a/sign-up.html
+++ b/sign-up.html
@@ -62,9 +62,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h4>First Name:</h4>
 							</div>
 							<div class="sign-up2">
-								<form>
 									<input type="text" name="firstName" placeholder="e.g. John" required=" "/>
-								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -73,9 +71,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h4>Last Name:</h4>
 							</div>
 							<div class="sign-up2">
-								<form>
 									<input type="text" name="lastName" placeholder="e.g. Doe" required=" "/>
-								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -84,9 +80,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h4>Email Address:</h4>
 							</div>
 							<div class="sign-up2">
-								<form>
 									<input type="text" name="emailAddress" placeholder="e.g. admin@Ibuzz.com" required=" "/>
-								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -95,9 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h4>Contact Number:</h4>
 							</div>
 							<div class="sign-up2">
-								<form>
 									<input type="text" name="contactNumber" placeholder="e.g. 0123456789" required=" "/>
-								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -115,9 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h4>Username:</h4>
 							</div>
 							<div class="sign-up2">
-								<form>
 									<input type="text" name="username" placeholder="e.g. abc1234" required=" "/>
-								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -126,9 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h4>Password:</h4>
 							</div>
 							<div class="sign-up2">
-								<form>
 									<input type="password" name="password" placeholder="e.g. zzz9999" required=" "/>
-								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -137,17 +125,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h4>Confirm Password:</h4>
 							</div>
 							<div class="sign-up2">
-								<form>
 									<input type="password" name="cpassword" placeholder="e.g. zzz9999" required=" "/>
-								</form>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="sub_home">
 							<div class="sub_home_left">
-								<form>
-									<input type="submit" value="Submit">
-								</form>
+									<input type="submit" name="submit" value="Submit">
 							</div>
 							<div class="sub_home_right">
 								<p>Go Back to <a href="sign-in.html">Login</a></p>
