--- a/sign-up.html
+++ b/sign-up.html
@@ -93,14 +93,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="clearfix"> </div>
 						</div>
-						<!--<div class="form-group">
-							<label for="radio" class="col-sm-5 control-label"></label>
+						<div class="form-group">
+							<label for="radio" class="col-sm-4 control-label"></label>
 							<div class="col-sm-8">
-								<div class="radio-inline"><label><input type="radio" name="isDriver"><h4> Administrator</h4></label></div>
+								<div class="radio-inline"><label><input type="radio" name="isDriver" value="admin"><h4> Administrator</h4></label></div>
 								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-								<div class="radio-inline"><label><input type="radio" name="isDriver"><h4> Driver</h4></label></div>
+								<div class="radio-inline"><label><input type="radio" name="isDriver" value="driver"><h4> Driver</h4></label></div>
 							</div>
-						</div><br>-->
+						</div>
+						<br>
 						<h6>Login Information</h6>
 						<div class="sign-u">
 							<div class="sign-up1">
