--- a/dashboard.html
+++ b/dashboard.html
@@ -147,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<ul class="dropdown-menu drp-mnu">
 									<li> <a href="#"><i class="fa fa-cog"></i> Settings</a> </li> 
 									<li> <a href="#"><i class="fa fa-user"></i>Profile</a> </li> 
-									<li> <a href="sign-up.html"><i class="fa fa-sign-out"></i> Logout</a> </li>
+									<li> <a href="index.html"><i class="fa fa-sign-out"></i> Logout</a> </li>
 								</ul>
 							</li>
 							<div class="clearfix"> </div>
