--- a/sign-up.html
+++ b/sign-up.html
@@ -146,7 +146,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		<!--footer section start-->
 			<footer>
-			   <p>&copy 2015 Easy Admin Panel. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">w3layouts.</a></p>
+			   <p>Copyright © iBuzz 2018</p>
 			</footer>
         <!--footer section end-->
 	</section>
