--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>iBuzz- Book-keeping Web System</title>
+        <title>iBuzz - Web-based Business System</title>
+        <link rel="icon" href="images/Icon.ico" type="image/x-icon">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/mainlayout.css">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -108,7 +109,7 @@
                         <p>This is just version v0.1, we're still getting things ready. In the meantime, go ahead and make an account first!</p>
 						</p>
 						<p>
-						
+
 						<div style="clear: both;"></div> <!-- Need to put this lol -->
 						<p class="pad"></p>
                     </div>
@@ -133,4 +134,3 @@
         </footer>
     </body>
 </html>
-
