--- a/sign-in.html
+++ b/sign-in.html
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="graphs">
 					<div class="sign-in-form">
 						<div class="sign-in-form-top">
-							<p><span>Sign In to IBuzz</span></p>
+							<p><span>Sign In to iBuzz</span></p>
 						</div>
 						<div class="signin">
 							<!--
