Added Register button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 								-->
 								<ul class="nav navbar-nav navbar-right">
                                     <li>
-                                        <a class="topfoc" href="sign-in.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp SIGN IN</a>
+                                        <a class="topfoc" href="sign-in.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp LOGIN</a>
+                                    </li>
+                                    <li>
+                                      <a class="topfoc" href="sign-up.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp REGISTER</a>
                                     </li>
                                 </ul>
                             </div>
