--- a/sign-up.html
+++ b/sign-up.html
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="form-group">
 							<label for="radio" class="col-sm-4 control-label"></label>
 							<div class="col-sm-8">
-								<div class="radio-inline"><label><input type="radio" name="isDriver" value="admin"><h4> Office Staff</h4></label></div>
+								<div class="radio-inline"><label><input type="radio" name="isDriver" value="employee"><h4> Office Staff</h4></label></div>
 								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 								<div class="radio-inline"><label><input type="radio" name="isDriver" value="driver"><h4> Stock Driver</h4></label></div>
 							</div>
