Index Page Update

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 								-->
 								<ul class="nav navbar-nav navbar-right">
                                     <li>
-                                        <a class="topfoc" href="sign-in.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp LOGIN</a>
+                                        <a class="topfoc" href="sign-in.html"><span class="glyphicon glyphicon-log-in"></span>&nbsp LOGIN</a>
                                     </li>
                                     <li>
-                                      <a class="topfoc" href="sign-up.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp REGISTER</a>
+                                      <a class="topfoc" href="sign-up.html"><span class="glyphicon glyphicon-pencil"></span>&nbsp REGISTER</a>
                                     </li>
                                 </ul>
                             </div>
@@ -74,13 +74,14 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <a href="about.php"><img src="images/carou01.png" alt="Image 1"></a>
+                                    <img src="images/carou01.png" alt="Image 1">
                                 </div>
                                 <div class="item">
-                                    <img src="images/carou01.png" alt="Image 2">
+                                    <img src="images/carou02.png" alt="Image 2">
                                 </div>
                                 <div class="item">
-                                    <a href="signup.php"><img src="images/carou01.png" alt="Image 3"></a>
+                                    <!--<a href="signup.php"><img src="images/carou03.png" alt="Image 3"></a>-->
+									<img src="images/carou03.png" alt="Image 3">
                                 </div>
                             </div>
                             <!-- Left and right controls -->
