Fix margin issue

--- a/sign-in.html
+++ b/sign-in.html
@@ -48,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
  <body class="sign-in-up">
     <section>
-			<div id="page-wrapper" class="sign-in-wrapper">
+			<div class="sign-in-wrapper">
 				<div class="graphs">
 					<div class="sign-in-form">
 						<div class="sign-in-form-top">
@@ -102,11 +102,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 			</div>
-		<!--footer section start-->
-			<footer>
-			   <p>Copyright © iBuzz 2018</p>
-			</footer>
-        <!--footer section end-->
 	</section>
 
 <script src="js/jquery.nicescroll.js"></script>
